[package]
name = "purple"
version = "0.1.0"
edition = "2021"

[lib]
name = "purple"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html





[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Globalization",
    "Win32_UI_Shell",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Time",
    "Win32_System_ProcessStatus",
    "Win32_Security_Authorization",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
]


[dependencies]
rand = "0.8.5"